--- a/kadai_013/index.html
+++ b/kadai_013/index.html
@@ -26,27 +26,26 @@
       </button>
       <!--スマホ用メニューボタン-->
     <nav id="nav-sp">
-      <button id="close" onclick="document.getElementById('nav-sp').style.display = 'none'">
-        <img src="images/button-close.png" alt="ナビゲーションを閉じる">
-      </button>
-
-        <ul>
-          <li>
+      <ul>
+        <li>
+          <img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementById('nav-sp').style.display = 'none'">
+        </li>
+        <li>
             <a id="logo-sp" href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">
               <img src="images/logo-sp.png" alt="トップページに戻る">
             </a>
-          </li>
-          <li>
+        </li>
+        <li>
             <a class="menu" href="index.html#concept" onclick="document.getElementById('nav-sp').style.display = 'none'">CONCEPT</a>
-          </li>
-          <li>
+        </li>
+        <li>
             <a class="menu" href="index.html#product" onclick="document.getElementById('nav-sp').style.display = 'none'">PRODUCT</a>
-          </li>
-          <li>
+        </li>
+        <li>
             <a class="menu" href="index.html#contact" onclick="document.getElementById('nav-sp').style.display = 'none'">CONTACT</a>
-          </li>
-        </ul>
-      </nav>
+        </li>
+      </ul>
+    </nav>
     </header>
 
     <main>
