課題０１３　再提出

--- a/kadai_013/index.html
+++ b/kadai_013/index.html
@@ -21,9 +21,7 @@
       </nav>
 
       <!--スマホ用メニューボタン-->
-      <button id="menu-sp" onclick="document.getElementById('nav-sp').style.display = 'block'">
-        <img src="images/button-menu.png" alt="ナビゲーション開く">
-      </button>
+      <img id="menu-sp" src="images/button-menu.png" alt="ナビゲーション開く" onclick="document.getElementById('nav-sp').style.display = 'block'">
       <!--スマホ用メニューボタン-->
     <nav id="nav-sp">
       <ul>
